--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -31,7 +31,7 @@ jobs:
         fi
 
     - name: Build
-      run: go build -v .
+      run: go build -v ./torrent/
 
     - name: Test
-      run: go test -v .
+      run: go test -v ./torrent/
